ligolang/src/test/contracts/negative/deep_pattern_matching/pm_fail5.mligo
type foo = None_fake | Some_fake of int

let t = fun (x: int option) ->
  match x with
  | Some_fake x -> x
  | None_fake -> 1